...
  };

  return (
    <View style={[styles.container, { top: headerTop }]}>
      <Pressable style={styles.menuWrap} onPress={() => handleRoute('/abandonments')}>
        <Heart width={24} height={24} />
        <Text style={styles.text}>입양공고</Text>
      </Pressable>
      <Pressable style={styles.menuWrap} onPress={() => handleRoute('/shelters')}>
        <Location width={24} height={24} />
        <Text style={styles.text}>보호소</Text>
      </Pressable>
    </View>
...
