...
        <YStack px={SCREEN_GUTTER}>
          <Menu
            label="로그아웃"
            style={{ paddingVertical: 14 }}
            onPress={logout}
            isLoading={isLoggingOut}
            testID="account-logout"
          />
          <Menu
            label="회원탈퇴"
            labelColor="$errorMain"
            style={{ paddingVertical: 14 }}
            onPress={() => router.push('/withdraw')}
...
